--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,8 @@ dependencies:
 #  - pulp
 #  - bokeh
   - ipyvolume
-#  - plotly
+  - plotly
+  - jupyter-dash
   - vpython
   - jupyterlab-vpython
 #  - fenics
